# secureMe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: BasicRule.cpp  BasicRule.h  CMakeLists.txt  Daemon.cpp  Daemon.h  FileWhitelist.cpp  FileWhitelist.h  NetworkMonitor.cpp  NetworkMonitor.h  ParaInfo.h  RuleManager.cpp  RuleManager.h  Utils.cpp  Utils.h  macro.h  main.cpp
src/test/: BasicRuleTest.cpp  DaemonTest.cpp  FileWhitelistTest.cpp  NetworkMonitorTest.cpp  main.cpp  mock.h
